[package]
name = "mlb-oracle"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
itertools = "0.12.1"
log = "0.4.20"
rand = "0.8.5"
serde_json = "1.0.113"
stderrlog = "0.6.0"
